<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scViewContactos"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="413dp"
        android:layout_height="210dp"
        android:background="#0A3354"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensagens"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/textNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/sbPesquisar"
        android:layout_width="327dp"
        android:layout_height="43dp"
        android:background="@drawable/custom_input"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FD971C"
        android:shadowColor="#00FFFFFF"
        android:text="@string/adicionar"
        android:textColor="#FFFFFF"
        app:cornerRadius="20dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        app:rippleColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />

    <ScrollView
        android:id="@+id/svMensagens"
        android:layout_width="328dp"
        android:layout_height="431dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/llMensagens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />


    </ScrollView>
    <ImageView
        android:id="@+id/retanguloFundo"
        android:layout_width="413dp"
        android:layout_height="90dp"
        android:background="#f4f4f4"
        android:contentDescription="@string/todo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnIrMensagens"
        android:layout_width="66dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/ENOVO_cinza_claro"
        android:contentDescription="@string/aa"
        android:drawableLeft="@drawable/ic_chat"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="@+id/retanguloFundo"
        app:layout_constraintTop_toTopOf="@+id/retanguloFundo"
        app:layout_constraintVertical_bias="0.432"
        tools:ignore="RtlHardcoded,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnIrContactos"
        android:layout_width="66dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/ENOVO_cinza_claro"
        android:contentDescription="@string/aa"
        android:drawableRight="@drawable/ic_contactos"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="@+id/retanguloFundo"
        app:layout_constraintTop_toTopOf="@+id/retanguloFundo"
        app:layout_constraintVertical_bias="0.432"
        tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>